# mwm

./: .gitignore  CMakeLists.txt  agent-status-hook.sh  config.lua.example  default.nix  flake.nix  justfile  mwm-cli.c  mwm.c  mwm.cpp  shell.nix
